<resources>
    <string name="app_name">Boda Nana y Elías</string>
    <string name="title_home">Inicio</string>
    <string name="title_sites">Sitios de Interés</string>
    <string name="title_gift">Regalos de boda</string>
    <string name="title_camera">Camera</string>
    <string name="title_wishes">Deseos</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_site_detail">SiteDetailActivity</string>

    <string name="site_email">Correo Electrónico: %1$s</string>
    <string name="title_activity_add_photo">AddPhotoActivity</string>
    <string name="title_activity_invitation">InvitationActivity</string>
</resources>
