<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/ic_action_heart"
            android:title="@string/title_home"/>

    <item
            android:id="@+id/navigation_sites"
            android:icon="@drawable/ic_action_location"
            android:title="@string/title_sites"/>

    <item
            android:id="@+id/navigation_camera"
            android:icon="@drawable/ic_action_picture"
            android:title="@string/title_camera"/>

    <item
            android:id="@+id/navigation_gift"
            android:icon="@drawable/ic_action_gift"
            android:title="@string/title_gift"/>

    <item
            android:id="@+id/navigation_wishes"
            android:icon="@drawable/ic_action_wish"
            android:title="@string/title_wishes"/>


</menu>
